# proto

./: BUILD.bazel  WORKSPACE  bazel-bin  bazel-out  bazel-proto  bazel-testlogs  go.mod  post_build.sh  proto.go  proto_test.go  workspace.bzl
.devcontainer/: Dockerfile
entities/: BUILD.bazel
subpkg/: BUILD.bazel  subpkg.go  subpkg_test.go
