load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/jjhegedus/proto
gazelle(name = "gazelle")

go_library(
    name = "proto",
    srcs = ["proto.go"],
    importpath = "github.com/jjhegedus/proto",
    visibility = ["//visibility:public"],
)

go_test(
    name = "proto_test",
    srcs = ["proto_test.go"],
    deps = [":proto"],
)
