load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("//:workspace.bzl", "relocate_go_proto_library")

# gazelle:prefix github.com/jjhegedus/proto/entities
gazelle(name = "gazelle")

proto_library(
    name = "entities_proto",
    srcs = ["entities.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "entities_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/jjhegedus/proto/entities",
    proto = ":entities_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "entities",
    embed = [":entities_go_proto"],
    importpath = "github.com/jjhegedus/proto/entities",
    visibility = ["//visibility:public"],
)

go_test(
    name = "entities_test",
    srcs = ["entities_test.go"],
)

relocate_go_proto_library(
    name = "relocate_go_proto_library",
    srcs = glob(["*.proto"]),
    import_path = "github.com/jjhegedus/proto/entities",
    # out="tmp.txt"
)

genrule(
    name = "cmd-wrapper",
    srcs = [":relocate_go_proto_library"],
    outs = ["cmdwrapper.sh"],
    cmd = "cat $(location :relocate_go_proto_library)  > \"$@\"",
    executable = True
)

sh_binary(
  name = "relocate",
  srcs = ["cmdwrapper.sh"],
)

genrule(
  name ="make_test",
  srcs = [],
  outs = ["test.sh"],
  executable = True,
  cmd = "echo echo \"test\" > \"$@\"",
)

sh_binary(
  name = "test",
  srcs = ["test.sh"],
)

